aligned favorite icon correctly

--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -24,7 +24,6 @@
   margin-top: 16px;
 }
 
-
 .photo-details-modal__images {
   margin-left: 36px;
   margin-top: 8px;
@@ -35,8 +34,7 @@
   flex-direction: column;
 }
 .photo-details-modal__image {
-  max-width: 95%;
-  margin: auto;
+  height: 95%;
 }
 
 .photo-details-modal__top-bar {
