--- a/frontend/src/styles/PhotoFavButton.scss
+++ b/frontend/src/styles/PhotoFavButton.scss
@@ -8,9 +8,12 @@
   height: 32px;
   text-align: center;
   border-radius: 100%;
+  right: -8px;
+  top: 8px;
 }
 
 .photo-list__fav-icon-svg {
   padding: 7px;
   top: 2px;
+  width: auto;
 }
