--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -7,6 +7,8 @@
   border-radius: 8px;
   max-width: fit-content;
   background-color:  #FFFFFF;
+  display: flex;
+  flex-direction: column;
  
 }
 
